--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2023-2025</span>
-    					<h2>M.S. <span>Data Science</span></h2>
+    					<!-- <span class="date">2023-2025</span> -->
+    					<span class="date">Master of Science</span>
+    					<h2><span>Data Science - Computational Track</span></h2>
     					<span class="position">New Jersey Institute of Technology, NJ, USA</span>
     					<!--<p class="mt-4">GPA: 3.89/4</p>-->
     				</div>
@@ -157,8 +158,9 @@
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2021</span>
-    					<h2>B.Tech. <span>Mechanical Engineering</span></h2>
+    					<!-- <span class="date">2017-2021</span> -->
+    					<span class="date">Bachelor of Technology</span>
+    					<h2><span>Mechanical Engineering</span></h2>
     					<span class="position">SRM University, AP, India</span>
     					<!--<p class="mt-4">GPA: 8.51/10</p>-->
     				</div>
