added extLink icon in projects; updated bio;

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>I am a dedicated Data Science graduate student at the New Jersey Institute of Technology, with over four years of programming experience and a strong passion for data-driven problem-solving. I am proficient in data engineering, exploratory data analysis, statistical modeling, machine learning, and deploying end-to-end solutions.</p>
+							<p>I am a dedicated M.S Data Science graduate from New Jersey Institute of Technology, with a strong passion for data-driven problem-solving. I am proficient in data science, data engineering, exploratory data analysis, statistical modeling, machine learning, and deploying end-to-end solutions.</p>
 							<p>My academic and professional journey has been driven by a commitment to leveraging data and technology to uncover insights and drive informed decision-making. I continuously enhance my technical proficiency in programming, data structures, algorithms, and DevOps tools to adapt to the evolving demands of the tech industry.</p>
 						</div>
 					</div>
