--- a/projects/index.html
+++ b/projects/index.html
@@ -64,12 +64,11 @@
 
     <section class="ftco-section ftco-no-pb" id="projects-sub-section">
       <div class="container" id="projects-container">
-        <div class="row justify-content-center mb-5 pb-5">
+        <!-- <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h5 style="text-decoration: underline;">Note: This section of the website is under development.</h5>
-            <!-- <p>Click on the Github stars/forks links for more info.</p> -->
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
