removed index.html from hrefs in navbar; resume cleanup;

--- a/projects/index.html
+++ b/projects/index.html
@@ -33,7 +33,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="../index.html">Vinay</a>
+	      <a class="navbar-brand" href="../">Vinay</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span>
 	      </button>
@@ -51,7 +51,7 @@
             <h1 class="mb-3 bread">Projects</h1>
             <p class="breadcrumbs">
               <span class="mr-2">
-                <a href="../index.html#home-section">Home <i class="ion-ios-arrow-forward"></i></a>
+                <a href="../#home-section">Home <i class="ion-ios-arrow-forward"></i></a>
               </span>
               <span class="mr-2">
                 <a href="#">Projects</a>
