--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Newark, NJ 07102</p>
+	            <p>Livonia, MI</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
