--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 							<li class="ftco-animate"><a href="https://www.linkedin.com/in/vinayramg/" target="_blank" rel="noopener noreferrer"><span class="icon-linkedin"></span></a></li>
 							<li class="ftco-animate"><a href="https://github.com/vinay-ram1999" target="_blank" rel="noopener noreferrer"><span class="icon-github"></span></a></li>
 							<li class="ftco-animate"><a href="https://orcid.org/0009-0007-3924-5258" target="_blank" rel="noopener noreferrer"><span><i class="fa fa-orcid" aria-hidden="true"></i></span></a></li>
+							<!-- <li class="ftco-animate"><a href="https://orcid.org/0009-0007-3924-5258" target="_blank" rel="noopener noreferrer"><span class="icon"><i class="fa-brands fa-google-scholar"></i></span></a></li> -->
 						</ul>
 		            </div>
 		          </div>
@@ -186,7 +187,7 @@
           </div>
         </div>
     		<div class="row">
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa fa-python" aria-hidden="true"></i>
@@ -196,7 +197,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<!-- <div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-r-project"></i>
@@ -205,8 +206,8 @@
 								<h3 class="mb-5">R</h3>
 							</div>
 						</a>
-					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					</div> -->
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-golang"></i>
@@ -216,7 +217,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-rust"></i>
@@ -226,7 +227,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<!-- <div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa fa-c" aria-hidden="true"></i>
@@ -235,8 +236,8 @@
 								<h3 class="mb-5">C</h3>
 							</div>
 						</a>
-					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					</div> -->
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa fa-mysql" aria-hidden="true"></i>
@@ -246,7 +247,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa fa-postgresql" aria-hidden="true"></i>
@@ -256,7 +257,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="icon-mongodb"></i>
@@ -266,7 +267,27 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
+						<a class="services-1">
+							<span class="icon">
+								<img src="images/Apachespark--Streamline-Simple-Icons.svg" style="width:48px; height:auto;">
+							</span>
+							<div class="desc">
+								<h3 class="mb-5">Apache Spark</h3>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-2 text-center d-flex ftco-animate">
+						<a class="services-1">
+							<span class="icon">
+								<img src="images/Apacheairflow--Streamline-Simple-Icons.svg" style="width:48px; height:auto;">
+							</span>
+							<div class="desc">
+								<h3 class="mb-5">Apache Airflow</h3>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="icon-git"></i>
@@ -276,7 +297,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-linux"></i>
@@ -286,7 +307,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-docker"></i>
@@ -296,7 +317,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<!-- <div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-jenkins"></i>
@@ -305,8 +326,8 @@
 								<h3 class="mb-5">Jenkins</h3>
 							</div>
 						</a>
-					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					</div> -->
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="fa-brands fa-aws"></i>
@@ -317,7 +338,7 @@
 						</a>
 					</div>
 					<!--
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="icon-area-chart"></i>
@@ -327,7 +348,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="icon-bar-chart"></i>
@@ -337,7 +358,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-2 text-center d-flex ftco-animate">
+					<div class="col-md-2 text-center d-flex ftco-animate">
 						<a class="services-1">
 							<span class="icon">
 								<i class="icon-d3"></i>
@@ -373,10 +394,20 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
-            <p>Hover the cursor / Touch on the achievement to know more.</p>
+            <!-- <p>Hover the cursor / Touch on the achievement to know more.</p> -->
           </div>
         </div>
     		<div class="row">
+				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/DBX_ML_Associate.png); background-size: 80%;">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a>Machine Learning Engineer Associate</a></h3>
+	    					<span>Databricks</span>
+							<p><a href="https://credentials.databricks.com/d6f7470c-829c-43ee-8abd-6c6203d58235#acc.azTsJqM3" target="_blank" rel="noopener noreferrer">click here</a> to verify</p>
+	    				</div>
+    				</div>
+  				</div>
 				<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dataexpert_bootcamp.png);">
     					<div class="overlay"></div>
@@ -397,7 +428,7 @@
 	    				</div>
     				</div>
   				</div>
-				  <div class="col-md-4">
+				  <div class="col-md-6">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/FLAIRS.jpg); background-size: 90%;">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -472,7 +503,7 @@
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
 	            <!-- <p><a href="tel://+19085521879">+1 908-552-1879</a></p> -->
-				 <p>xxx-xxx-xxxx</p>
+				 <p>-</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
